# Velox-CLI

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: check.yml  scheduled.yml  test.yml
docs/: demo.tape
src/: app_cmd.rs  error.rs  exec.rs  main.rs  prelude.rs  run_new.rs  utils.rs
src/utils/: mod.rs
