[package]
name = "veloxide"
version = "2.0.1"
authors = ["Liam Woodleigh <liam.woodleigh@gmail.com>"]
license = "MIT"
description = "The CLI for Veloxide, the stack for building web apps with Rust."
categories = ["command-line-utilities", "web-programming", "config"]
edition = "2021"
repository = "https://github.com/liamwh/Veloxide-CLI"

[dependencies]
clap = { version = "~4", features = ["cargo"] }
thiserror = "1"
regex = "~1"
walkdir = "~2.4"
indicatif = "~0.17"
dialoguer = "~0.11"
console = "~0.15"

[dev-dependencies]
anyhow = "1"
pretty_assertions = "~1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]
